hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__convert_s@llvm20.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private double @_hl.main.1(i32 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = sitofp i32 %0 to double
  ret double %1
}
